Fix alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -125,9 +125,8 @@
         }
         
         .text {
-            float: left;
+            margin-left: 150px;
             padding-top: 20px;
-            padding-left: 30px;
         }
     }
 }
